objects/Quote.object
<CustomObject>
    <fields>
        <fullName>SLMA2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLMA #</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND (3)</booleanFilter>
            <filterItems>
                <field>Apttus__APTS_Agreement__c.Apttus__Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Parent_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>Apttus__APTS_Agreement__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Legacy Agreement Numbers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Quotes (SLMA #)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLMA_Report__c</fullName>
        <formula>IF(ISBLANK( SLMA2__c), Entry_SLMA__c ,SLMA2__r.Name)</formula>
        <label>SLMA #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLMA #</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Quotes (SLMA #)</relationshipLabel>
        <relationshipName>Quotes_SLMA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SL_Discount__c</fullName>
        <label>System-Level Design Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <formula>Employee_Last_Name__c+&quot;, &quot;+ Employee_First_Name__c +&quot;%&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City_State_Formatting__c</fullName>
        <description>Formatting CITY State ZIpcode for Ship To field, used in Conga Templates</description>
        <formula>IF( ShippingCity = &apos;&apos; || ShippingState = &apos;&apos;, ShippingCity  &amp;&quot; &quot;&amp; ShippingState &amp;&quot; &quot;&amp; ShippingPostalCode, ShippingCity  &amp;&quot;, &quot;&amp; ShippingState &amp;&quot; &quot;&amp; ShippingPostalCode)</formula>
        <label>Ship To City State Formatting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <description>Field for Country populated on Ship To Account</description>
        <label>Ship To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_SAP_ID__c</fullName>
        <formula>Ship_To__r.SAP_Customer_ID_Mask__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To SAP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ship To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND ((2 AND 3) OR 4)) OR (5 AND (6 AND 7)) OR 8</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>RenMaint Quote</value>
            </filterItems>
            <filterItems>
                <field>Account.Ship_To__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Prospect</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>RenMaint Quote</value>
            </filterItems>
            <filterItems>
                <field>Account.Ship_To__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Ship To)</relationshipLabel>
        <relationshipName>Shipped</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_City_State_Formatting__c</fullName>
        <description>Formatting CITY State ZIpcode for Contact field, used in Conga Templates</description>
        <formula>IF( Contact_City__c = &apos;&apos; || Contact_State__c = &apos;&apos;, Contact_City__c &amp;&quot; &quot;&amp; Contact_State__c &amp;&quot; &quot;&amp; Contact_Zipcode__c, Contact_City__c  &amp;&quot;, &quot;&amp; Contact_State__c &amp;&quot; &quot;&amp; Contact_Zipcode__c)</formula>
        <label>Sold To City State Formatting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_format_Invoice_of_the_Bill_to_Cu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special format Invoice of the Bill to Cu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>*Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Employee State</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Level_Design_TCV__c</fullName>
        <label>System-Level Design TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <picklist>
            <picklistValues>
                <fullName>NT30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F052</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F151</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F254</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Format__c</fullName>
        <formula>if (Total_Discount__c&gt;0,&apos;-&apos; &amp; Quote_Currency_Symbol2__c &amp; &apos; &apos; &amp; IF(abs(Total_Discount__c) &gt;= 1000000, 
TEXT(FLOOR(round(abs(Total_Discount__c),0) / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
abs(Total_Discount__c) &gt;= 1000, 
RIGHT(TEXT(FLOOR(round(abs(Total_Discount__c),0) / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(round(abs(Total_Discount__c),0))), 3) , Quote_Currency_Symbol2__c &amp; &apos; &apos; &amp; IF(abs(Total_Discount__c) &gt;= 1000000, 
TEXT(FLOOR(round(abs(Total_Discount__c),0) / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
abs(Total_Discount__c) &gt;= 1000, 
RIGHT(TEXT(FLOOR(round(abs(Total_Discount__c),0) / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(round(abs(Total_Discount__c),0))), 3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Number__c</fullName>
        <formula>-1 * Total_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <description>Total header discount</description>
        <label>Total Discount</label>
        <summarizedField>RenMaint_Discount__c.Discount_Amount__c</summarizedField>
        <summaryForeignKey>RenMaint_Discount__c.Quote_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Extended_Price_Format__c</fullName>
        <formula>Quote_Currency_Symbol2__c &amp; &apos; &apos; &amp; IF(Total_Extended_Price__c &lt; 0,&quot;-&quot;,&quot;&quot;) &amp; IF(abs(Total_Extended_Price__c) &gt;= 1000000,
TEXT(FLOOR(round(Total_Extended_Price__c,0) / 1000000)) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
IF(abs(Total_Extended_Price__c) &gt;= 1000,
RIGHT(TEXT(FLOOR(round(Total_Extended_Price__c,0) / 1000)), 3) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(round(Total_Extended_Price__c,0))), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Extended Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Extended_Price__c</fullName>
        <label>Total Extended Price</label>
        <summarizedField>QuoteLineItem.Extended_Price__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>$RecordType.Name</formula>
        <label>Quote Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uplift_Number__c</fullName>
        <label>Uplift</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uplift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Uplift</label>
        <referenceTo>Uplift__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIP_Discount__c</fullName>
        <label>VIP Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VIP_Product_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>VIP Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_TCV__c</fullName>
        <label>VIP TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Violations_Count__c</fullName>
        <label>Violations Count</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Violations__c</field>
            <operation>equals</operation>
            <value>T</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Violations_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Line Item Violations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WAN_Rate__c</fullName>
        <inlineHelpText>This field will display the WAN Rate for the selected WAN Type on saving the record.</inlineHelpText>
        <label>WAN Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WAN_Type__c</fullName>
        <label>WAN Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <description>Employee Zipcode</description>
        <label>Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>incremental_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>incremental Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Identify that record is migrated from siebel or not</description>
        <inlineHelpText>To Identify that record is migrated from siebel or not</inlineHelpText>
        <label>isMigrated</label>
        <type>Checkbox</type>
    </fields>    
    <recordTypes>
        <fullName>DIP_Quote</fullName>
        <active>true</active>
        <label>DIP Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>IP_Access_Quote</fullName>
        <active>true</active>
        <label>IP Access Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>IP_Access_Selection_IP_Tensilica_Quote</fullName>
        <active>true</active>
        <label>IP Access Selection - IP Tensilica Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>IP_Access_Selection_Quote</fullName>
        <active>true</active>
        <label>IP Access Selection - DIP Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>IP_Board_Quote</fullName>
        <active>true</active>
        <description>Represents quote of type of tensilica cosmic hardware.</description>
        <label>IP Board Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>IP_Tensilica_Quote</fullName>
        <active>true</active>
        <description>Represents quote of type of tensilica</description>
        <label>IP - Tensilica Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>RenMaint</fullName>
        <active>true</active>
        <label>RenMaint Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>X99_YR_Other_Quote</fullName>
        <active>true</active>
        <label>99-YR/Other Quote</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Att_End_Date_Greater_than_Att_Start_Date</fullName>
        <active>false</active>
        <description>Attachment Expiry Date should be always greater than Attachment Effective Date.</description>
        <errorConditionFormula>Attachment_Exhibit_Effective_Date__c    &gt;   Attachment_Exhibit_Expiry_Date__c</errorConditionFormula>
        <errorMessage>Attachment Expiry Date should be always greater than Attachment Effective Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CDN_Agreement_Mandatory_99Yr</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Setup.Data_Migration__c.Data_Migration_Bypass__c == false, /*nalli 6Jan2013*/ 
$RecordType.Name = &apos;99-YR/Other Quote&apos;, ISPICKVAL(Status,&apos;Formal&apos;) , CDN_Agreement2__c ==null , Entry_CDN_Agreement__c ==null)</errorConditionFormula>
        <errorMessage>CDN Agreement is mandatory for Formal Quotes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cust_Product_mandatory_Status_Formal</fullName>
        <active>true</active>
        <description>Customer Product on Page Layout: DIP Quotes, IP Access, IP Access Selection Quotes are required When status = &apos;Formal&apos; and contains IP Products on Quote Line Items</description>
        <errorConditionFormula>AND($Setup.Data_Migration__c.Data_Migration_Bypass__c == false,  $Profile.Name &lt;&gt; &apos;5_1 - Data Steward&apos;, 
OR($RecordType.Name = &apos;DIP Quote&apos;,$RecordType.Name = &apos;IP Access Quote&apos;,$RecordType.Name = &apos;IP Access Selection Quote&apos;),
ISPICKVAL(Status,&apos;Formal&apos;) ,ISBLANK(Customer_Product__c), CONTAINS(Line_Items_Price_Book_Types__c, &apos;DIP&apos;))</errorConditionFormula>
        <errorMessage>Customer Product is required for IP Products</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DLTA_Or_PLMA_Required</fullName>
        <active>false</active>
        <description>Either DTLA # or PLMA # is required for IP board quotes.</description>
        <errorConditionFormula>AND($Profile.Name != &apos;5_1 - Data Steward&apos;,$Setup.Data_Migration__c.Data_Migration_Bypass__c == false, $RecordType.Name = &apos;IP Board Quote&apos;, ISPICKVAL(Status,&apos;Formal&apos;), CDN_Agreement2__c == null, Entry_CDN_Agreement__c == null, PLMA2__c == null, Entry_PLMA__c == null)</errorConditionFormula>
        <errorMessage>Either DTLA # or PLMA # is mandatory for Formal Quotes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DTLA_Mandatory_IP</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
$Profile.Name != &apos;5_1 - Data Steward&apos;, 
$Setup.Data_Migration__c.Data_Migration_Bypass__c == false, /*nalli 6Jan2013*/ 
$RecordType.Name = &apos;DIP Quote&apos;, ISPICKVAL(Status,&apos;Formal&apos;) , CDN_Agreement2__c ==null , Entry_CDN_Agreement__c ==null)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>DTLA # is mandatory for Formal Quotes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expiration_Date_Validation</fullName>
        <active>true</active>
        <description>Expiration Ship Date must be greater then Revision Date</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, /*ASR #566115 : Merging Issue */ 
$Setup.Data_Migration__c.Data_Migration_Bypass__c == false, /*nalli 6Jan2013*/
NOT( ExpirationDate &gt;= Start_Date__c )
)</errorConditionFormula>
        <errorDisplayField>ExpirationDate</errorDisplayField>
        <errorMessage>Expiration Ship Date must be greater then Revision Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Freight_Fields_Required</fullName>
        <active>true</active>
        <description>Freight terms, details are required for Formal quotes.</description>
        <errorConditionFormula>AND($Profile.Name != &apos;5_1 - Data Steward&apos;,$Setup.Data_Migration__c.Data_Migration_Bypass__c == false, $RecordType.Name = &apos;IP Board Quote&apos;, ISPICKVAL(Status,&apos;Formal&apos;), OR(Freight_Details__c == null, ISPICKVAL(Freight_Terms__c, &apos;&apos;)))</errorConditionFormula>
        <errorMessage>Freight terms and freight details are required for IP board quotes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Host_ID_Mandatory_Status_Formal</fullName>
        <active>true</active>
        <description>Host iD on Page Layout: DIP Quotes, IP Access, IP Access Selection Quotes are required When status = &apos;Formal&apos; and contains VIP Products on Quote Line Items</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, $Setup.Data_Migration__c.Data_Migration_Bypass__c == false, 
OR($RecordType.Name = &apos;DIP Quote&apos;,$RecordType.Name = &apos;IP Access Quote&apos;,$RecordType.Name = &apos;IP Access Selection Quote&apos;),
ISPICKVAL(Status,&apos;Formal&apos;) ,ISBLANK(Host_Id__c),  CONTAINS( Line_Items_Price_Book_Types__c , &apos;VIP Catalog&apos;) )</errorConditionFormula>
        <errorMessage>Host ID is required for VIP Products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IP_Acccess_Amount_cannot_be_Less_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Setup.Data_Migration__c.Data_Migration_Bypass__c == false, $RecordType.Name = &apos;IP Access Quote&apos;,IP_Access_Amount__c&lt;0)</errorConditionFormula>
        <errorDisplayField>IP_Access_Amount__c</errorDisplayField>
        <errorMessage>IP Access Amount must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Discount</fullName>
        <active>false</active>
        <description>Product Discount must be within -0 to 100</description>
        <errorConditionFormula>!OR( ISNULL(Discount__c ), AND( Discount__c &gt;= -100,  Discount__c &lt;= 100 ))</errorConditionFormula>
        <errorDisplayField>Discount__c</errorDisplayField>
        <errorMessage>Product Discount must be within -0 to 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequiredShipToifStatusFormal</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, /*ASR #566115 : Merging Issue */ 
$Setup.Data_Migration__c.Data_Migration_Bypass__c == false, /*nallli added 6Jan2012*/ 
OR( $RecordType.Name =&quot;IP Access Quote&quot;, $RecordType.Name = &apos;IP - Tensilica Quote&apos;, $RecordType.Name = &quot;DIP Quote&quot;, $RecordType.Name = &quot;99-YR/Other Quote&quot;),
  ISPICKVAL( Status, &quot;Formal&quot; ),
OR(
  ISBLANK(Ship_To__c),
  ISBLANK(Bill_To__c),
  ISPICKVAL(Payment_Terms__c, &quot;&quot;)
)
)</errorConditionFormula>
        <errorMessage>Bill To, Ship To, Payment Terms cannot be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Fields_for_IP_Access_Sel</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Setup.Data_Migration__c.Data_Migration_Bypass__c == false, /*nallli added 6Jan2012*/ 
OR($RecordType.Name =&quot;IP Access Selection - DIP Quote&quot;, $RecordType.Name = &apos;IP Board Quote&apos;, $RecordType.Name = &apos;IP Access Selection - IP Tensilica Quote&apos;), 
ISPICKVAL( Status, &quot;Formal&quot; ), 
OR( 
ISBLANK(Ship_To__c), 
ISBLANK(Bill_To__c)
) 
)</errorConditionFormula>
        <errorMessage>Bill To, Ship To cannot be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Royalty_Type</fullName>
        <active>false</active>
        <description>Checks that Royalty Type field should not be blank.</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;,$Setup.Data_Migration__c.Data_Migration_Bypass__c == false,$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, $RecordType.Name = &apos;IP - Tensilica Quote&apos;, ISPICKVAL(Status,&apos;Formal&apos;) ,  ISBLANK(Royalty_Type__c))</errorConditionFormula>
        <errorMessage>Royalty Type is mandatory for Formal Quotes.</errorMessage>
    </validationRules>
</CustomObject>